kubernetes/applications/nginx-proxy-manager/mariadb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: nginx-proxy-manager
  labels:
    app: mariadb
spec:
  serviceName: mariadb-headless
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: mariadb
          image: jc21/mariadb-aria:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  mysqladmin ping \
                    --silent \
                    -h 127.0.0.1 \
                    -uroot \
                    -p"${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  mysqladmin ping \
                    --silent \
                    -h 127.0.0.1 \
                    -uroot \
                    -p"${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
