kubernetes/applications/nginx-proxy-manager/mariadb-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-headless
  namespace: nginx-proxy-manager
  labels:
    app: mariadb
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
