kubernetes/applications/nginx-proxy-manager/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nginx-proxy-manager
  labels:
    app: mariadb
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
